--- a/dada/templates/membership.tmpl
+++ b/dada/templates/membership.tmpl
@@ -14,157 +14,185 @@
 
 <div id="membership"></div> 
 
+
+<!-- tmpl_if done -->
+	<!-- tmpl_include changes_saved_dialog_box_widget.tmpl  -->
+<!--/tmpl_if-->
+
+
+<!-- tmpl_include view_list_modalmenu_widget.tmpl -->
+
+
+
 <form> 
 	<input type="hidden" id="s_program_url" name="s_program_url" value="<!-- tmpl_var S_PROGRAM_URL -->" /> 
 	<input type="hidden" id="email"         name="email"         value="<!-- tmpl_var email -->" /> 
 </form> 
 
 
-	<!-- tmpl_if done -->
-		<!-- tmpl_include changes_saved_dialog_box_widget.tmpl  -->
-	<!--/tmpl_if-->
-
-
-	<!-- tmpl_include view_list_modalmenu_widget.tmpl -->
-
-
-
-	<fieldset> 
-	<legend><!-- tmpl_var email --> Membership</legend>
-
-
-	<!-- tmpl_unless member_of_num --> 
-		<div class="clearskiesbox">
-			<p>
-				<!-- tmpl_var email --> isn't a part of your Mailing List.
-			</p>
-		</div>
-	<!-- tmpl_else --> 
-
-		<h2>Member of:</h2>
-
-		<ul style="list-style: none;">
-			<!-- tmpl_loop member_of --> 
-				<li>
-					<strong><!-- tmpl_var type_title --></strong>
-				</li>
-			<!-- /tmpl_loop -->
-		</ul>
-	<!-- /tmpl_unless --> 
-
-
-
-
-	<!-- tmpl_if list_settings.enable_subscription_approval_step -->
-		<!-- tmpl_if subscribed_to_sub_request_list --> 
-			<fieldset>
-			<legend>Subscription Requests</legend>
-			<p><!-- tmpl_var email --> has requested to be Subscribed to your Mailing List.</p>
-			<form action="<!-- tmpl_var S_PROGRAM_URL -->" method="post">
-				<input type="hidden" name="f"       value="subscription_requests" />
-				<input type="hidden" name="type" value="sub_request_list" />
-				<input type="hidden" name="address" value="<!-- tmpl_var email -->" />
-				<input type="hidden" name="return_to" value="membership" />
-				<input type="hidden" name="return_address" value="<!-- tmpl_var email -->" />
-				<input type="submit" name="process"  class="plain" value="Approve Subscription Request" />
-				<input type="submit" name="process"  class="plain" value="Deny Subscription Request" />
-			</form>
-			</fieldset>
-		<!-- /tmpl_if -->
-	<!-- /tmpl_if -->
-	
-
-<!-- tmpl_if add_to_num --> 
-
-	<fieldset>
-	<legend>Add</legend>
-
-		<form  action="<!-- tmpl_var S_PROGRAM_URL -->" method="post" id="add_email_form" accept-charset="<!-- tmpl_var HTML_CHARSET -->">
-			<input type="hidden" name="email" value="<!-- tmpl_var email -->" id="add_email" />
-			<input type="hidden" name="process" value="1" id="add_process"/>
-			<input type="hidden" name="rand_string" id="add_rand_string" value="<!-- tmpl_var rand_string -->" />
-			<input type="hidden" name="method" value="via_add_one" id="add_method" />
-			<input type="hidden" name="return_to" value="membership" id="add_return_to" />
-			<input type="hidden" name="return_address" value="<!-- tmpl_var email -->" id="add_return_address" />
-			<p>
-				<label for="type_add">
-					&#8594; Add
-				</label>
-				address to: <!-- tmpl_var add_to_popup_menu -->
-				<input type="button" value="Add..."  class="processing"  id="validate_add_email" />
-			</p>
-		</form>
-	</fieldset>
-<!-- /tmpl_if --> 
-
-<fieldset> 
-	
-	<legend>Update</legend>
-	
-	<!-- tmpl_if member_of_num --> 
-	
-	<form action="<!-- tmpl_var S_PROGRAM_URL -->" id="update_email_form" method="post" accept-charset="<!-- tmpl_var HTML_CHARSET -->">
-		<input type="hidden" name="original_email" id="original_email" value="<!-- tmpl_var email -->" />
-	<p>
-		<label for="updated_email">
-			&#8596; Update
-		</label> address to:
+<div id="tabs"> 
+	<ul>
 		
-		<input type="text" id="updated_email" name="updated_email" value="<!-- tmpl_var email -->" />
-		<input type="button" value="Update..." class="cautionary" id="validate_update_email" />
+		<li>
+		<a href="#membership_tab">
+		Membership
+		</a>
+		</li>
+		<li>
+			<a href="#subscriber_history_tab">
+				Subscriber History
+			</a>
+		</li>
 		
-		<!-- tmpl_if root_login -->
-			<!-- tmpl_if can_have_subscriber_fields -->
-				<input type="button" value="Update on Multiple Mailing Lists..." class="cautionary" id="validate_update_email_for_multiple_lists" />
-			<!-- /tmpl_if -->
+		<li>
+			<a href="#activity_tab">
+				Mailing List Activity
+			</a>
+		</li>
+		<!-- tmpl_if can_have_subscriber_fields --> 
+			<li> 
+				<a href="#profile_tab">
+					Profile
+				</a>
+			</li>
 		<!-- /tmpl_if --> 
 		
-	</form> 
-	
-	<!-- /tmpl_if -->
+		
+		
+		
+	</ul>
 
-</fieldset> 
-
-<fieldset>
-	<legend>Remove</legend>
-	
-	<!-- tmpl_if remove_from_num --> 
-
-		<form action="<!-- tmpl_var S_PROGRAM_URL -->" method="post" accept-charset="<!-- tmpl_var HTML_CHARSET -->" id="remove_email_form">
-		<input type="hidden" name="process" value="delete" />
-	
-		<input type="hidden" name="address" value="<!-- tmpl_var email -->" />
-		<input type="hidden" name="f"       value="remove_subscribers" />	
-		<input type="hidden" name="return_to" value="membership" />
-		<input type="hidden" name="return_address" value="<!-- tmpl_var email -->" />
-		<p>
-			<label for="type_remove">&#8592;  Remove</label> address:
-			<input type="button" id="validate_remove_email" value="Remove..." class="cautionary"  />
-			<!-- tmpl_if root_login -->
-				<input type="button" id="validate_remove_email_multiple_lists" value="Remove on Multiple Mailing Lists..." class="cautionary"  />
-			<!-- /tmpl_if -->
-			</p>
-		</form>
-	
-		<!-- tmpl_if subscribed_to_list -->
-			<!-- tmpl_if list_settings.black_list -->
-				<!-- tmpl_if list_settings.add_unsubs_to_black_list -->
-					<p class="alert">
-						Subscribers that are unsubscribed from this mailing list will be added to the Black List.
+	<div id="membership_tab"> 
+			<!-- tmpl_unless member_of_num --> 
+				<div class="clearskiesbox">
+					<p>
+						<!-- tmpl_var email --> isn't a part of your Mailing List.
 					</p>
+				</div>
+			<!-- tmpl_else --> 
+
+				<h2>Member of:</h2>
+
+				<ul style="list-style: none;">
+					<!-- tmpl_loop member_of --> 
+						<li>
+							<strong><!-- tmpl_var type_title --></strong>
+						</li>
+					<!-- /tmpl_loop -->
+				</ul>
+			<!-- /tmpl_unless --> 
+
+
+
+
+			<!-- tmpl_if list_settings.enable_subscription_approval_step -->
+				<!-- tmpl_if subscribed_to_sub_request_list --> 
+					<fieldset>
+					<legend>Subscription Requests</legend>
+					<p><!-- tmpl_var email --> has requested to be Subscribed to your Mailing List.</p>
+					<form action="<!-- tmpl_var S_PROGRAM_URL -->" method="post">
+						<input type="hidden" name="f"       value="subscription_requests" />
+						<input type="hidden" name="type" value="sub_request_list" />
+						<input type="hidden" name="address" value="<!-- tmpl_var email -->" />
+						<input type="hidden" name="return_to" value="membership" />
+						<input type="hidden" name="return_address" value="<!-- tmpl_var email -->" />
+						<input type="submit" name="process"  class="plain" value="Approve Subscription Request" />
+						<input type="submit" name="process"  class="plain" value="Deny Subscription Request" />
+					</form>
+					</fieldset>
 				<!-- /tmpl_if -->
 			<!-- /tmpl_if -->
-		<!-- /tmpl_if -->
 
 
-	<!-- /tmpl_if --> 
-</fieldset> 
+		<!-- tmpl_if add_to_num --> 
 
-	<fieldset> 
-		
-	<legend>Membership History</legend> 
-	<p>
-		<!-- tmpl_if root_login --> 		
+			<fieldset>
+			<legend>Add</legend>
+
+				<form  action="<!-- tmpl_var S_PROGRAM_URL -->" method="post" id="add_email_form" accept-charset="<!-- tmpl_var HTML_CHARSET -->">
+					<input type="hidden" name="email" value="<!-- tmpl_var email -->" id="add_email" />
+					<input type="hidden" name="process" value="1" id="add_process"/>
+					<input type="hidden" name="rand_string" id="add_rand_string" value="<!-- tmpl_var rand_string -->" />
+					<input type="hidden" name="method" value="via_add_one" id="add_method" />
+					<input type="hidden" name="return_to" value="membership" id="add_return_to" />
+					<input type="hidden" name="return_address" value="<!-- tmpl_var email -->" id="add_return_address" />
+					<p>
+						<label for="type_add">
+							&#8594; Add
+						</label>
+						address to: <!-- tmpl_var add_to_popup_menu -->
+						<input type="button" value="Add..."  class="processing"  id="validate_add_email" />
+					</p>
+				</form>
+			</fieldset>
+		<!-- /tmpl_if --> 
+
+		<fieldset> 
+
+			<legend>Update</legend>
+
+			<!-- tmpl_if member_of_num --> 
+
+			<form action="<!-- tmpl_var S_PROGRAM_URL -->" id="update_email_form" method="post" accept-charset="<!-- tmpl_var HTML_CHARSET -->">
+				<input type="hidden" name="original_email" id="original_email" value="<!-- tmpl_var email -->" />
+			<p>
+				<label for="updated_email">
+					&#8596; Update
+				</label> address to:
+
+				<input type="text" id="updated_email" name="updated_email" value="<!-- tmpl_var email -->" />
+				<input type="button" value="Update..." class="cautionary" id="validate_update_email" />
+
+				<!-- tmpl_if root_login -->
+					<!-- tmpl_if can_have_subscriber_fields -->
+						<input type="button" value="Update on Multiple Mailing Lists..." class="cautionary" id="validate_update_email_for_multiple_lists" />
+					<!-- /tmpl_if -->
+				<!-- /tmpl_if --> 
+
+			</form> 
+
+			<!-- /tmpl_if -->
+
+		</fieldset> 
+
+		<fieldset>
+			<legend>Remove</legend>
+
+			<!-- tmpl_if remove_from_num --> 
+
+				<form action="<!-- tmpl_var S_PROGRAM_URL -->" method="post" accept-charset="<!-- tmpl_var HTML_CHARSET -->" id="remove_email_form">
+				<input type="hidden" name="process" value="delete" />
+
+				<input type="hidden" name="address" value="<!-- tmpl_var email -->" />
+				<input type="hidden" name="f"       value="remove_subscribers" />	
+				<input type="hidden" name="return_to" value="membership" />
+				<input type="hidden" name="return_address" value="<!-- tmpl_var email -->" />
+				<p>
+					<label for="type_remove">&#8592;  Remove</label> address:
+					<input type="button" id="validate_remove_email" value="Remove..." class="cautionary"  />
+					<!-- tmpl_if root_login -->
+						<input type="button" id="validate_remove_email_multiple_lists" value="Remove on Multiple Mailing Lists..." class="cautionary"  />
+					<!-- /tmpl_if -->
+					</p>
+				</form>
+
+				<!-- tmpl_if subscribed_to_list -->
+					<!-- tmpl_if list_settings.black_list -->
+						<!-- tmpl_if list_settings.add_unsubs_to_black_list -->
+							<p class="alert">
+								Subscribers that are unsubscribed from this mailing list will be added to the Black List.
+							</p>
+						<!-- /tmpl_if -->
+					<!-- /tmpl_if -->
+				<!-- /tmpl_if -->
+
+
+			<!-- /tmpl_if --> 
+		</fieldset>
+	</div>
+	
+	<div id="subscriber_history_tab"> 
+		<!-- tmpl_if root_login -->
 			<form id="toggle_membership_history"> 
 				
 				<input type="hidden" name="flavor" value="mailing_list_history" /> 
@@ -182,125 +210,140 @@
 	 				For All Mailing Lists
 				</label>
 				</p>
-				
-				<div>
-				<div style="height: 300px; overflow: auto;border:1px solid black;background:#fff">
+			<!-- /tmpl_if --> 
+			
 					<div id="mailing_list_history_loading"></div>
 					<div id="mailing_list_history"></div>
-				</div>
-				</div>  
 				
 				
-				
+		<!-- tmpl_if root_login -->		
 				<div class="buttonfloat"> 
 					<input type="submit" value="Export (csv)" class="processing" />
 				</div> 
 				<div class="floatclear"></div>
 			</form>
 		<!-- /tmpl_if -->
+	</div>  
+	
+	<div id="activity_tab">
+		
+		<form id="membership_activity_form"> 
+			<div id="membership_activity_loading"></div>
+			<div id="membership_activity"></div>
+			  
+		</form>
 
-</fieldset> 
-
-
+	</div>
+	
 	<!-- tmpl_if can_have_subscriber_fields --> 
-
-
-	<h1>Member Profile</h1>
 	
-		<!-- tmpl_if fields --> 
-		<fieldset> 
-		<legend>Profile Fields</legend>
+		<div id="profile_tab">
+			<!-- tmpl_if can_have_subscriber_fields --> 
+
+			<!-- tmpl_if fields --> 
+				<fieldset> 
+				<legend>Profile Fields</legend>
 
 
-		<!-- tmpl_unless root_login --> 
-			<div class="clearskiesbox">
-				<p>
-					You must be logged in with the <!-- tmpl_var PROGRAM_NAME --> Root Password to be able to edit a Subscriber's Profile Fields. 
-				</p>
-			</div>
-	
-		<!-- /tmpl_unless -->
-
-		<form action="<!-- tmpl_var S_PROGRAM_URL -->" method="post" accept-charset="<!-- tmpl_var HTML_CHARSET -->">
-
-		<!-- tmpl_if root_login --> 
-			 <input type="hidden" name="email"   value="<!-- tmpl_var email escape="HTML" -->" />
-			 <input type="hidden" name="f"       value="membership" />
-			 <input type="hidden" name="process" value="1" />
-			 <input type="hidden" name="type"    value="<!-- tmpl_var type -->" />
-		<!-- /tmpl_if --> 
-
-		<!-- tmpl_unless root_login --> 
-
-			<!-- tmpl_loop fields --> 
-			    <p>
-			     <label for="<!-- tmpl_var name escape=HTML -->" class="label_profile_fields">
-			      <!-- tmpl_var label escape=HTML --> (<!-- tmpl_var name escape=HTML -->): 
-			     </label>
-			    <input type="text" name="<!-- tmpl_var name escape=HTML -->" id="<!-- tmpl_var name escape=HTML -->" value="<!-- tmpl_var value escape=HTML -->" disabled="disabled" />
-			    </p>
-			<!--/tmpl_loop--> 
-
-		<!-- tmpl_else --> 
-
-			<p class="alert">
-				Subscriber Profile Fields information will be changed for all Mailing Lists.
-			</p>
-			<!-- tmpl_loop fields --> 
-			    <p>
-			     <label for="<!-- tmpl_var name escape=HTML -->" class="label_profile_fields">
-			      <!-- tmpl_var label escape=HTML --> (<!-- tmpl_var name escape=HTML -->): 
-			     </label>
-			    <input type="text" name="<!-- tmpl_var name escape=HTML -->" id="<!-- tmpl_var name escape=HTML -->" value="<!-- tmpl_var value escape=HTML -->" />
-			    </p>
-			<!--/tmpl_loop-->
-
-		<!-- /tmpl_unless --> 
-	
-		<!-- tmpl_if root_login --> 
-			 <div class="buttonfloat">
-			  <input type="submit" value="Edit Information" class="cautionary" />
-			 </div>
-		<!-- /tmpl_if --> 
-
-			</form>
-	
-		</fieldset>
-		<!-- /tmpl_if -->
-	
-
-	
-			<fieldset> 
-			<legend>Profile Password</legend>
-	
-			<!-- tmpl_if root_login --> 
-	
-				<div id="change_profile_password_button">
-					<input type="button" value="Click to Change Profile Password..." class="cautionary change_profile_password" />
-				</div> 
-				<div id="change_profile_password_form" style="display:none">
-					<form name="change_profile_password" action="<!-- tmpl_var S_PROGRAM_URL -->" method="post" accept-charset="<!-- tmpl_var HTML_CHARSET -->">
-						<input type="hidden" name="f" value="admin_change_profile_password" /> 
-						<input type="hidden" name="email" value="<!-- tmpl_var email -->" />
-						<input type="hidden" name="type" value="<!-- tmpl_var type -->" />
-				
+				<!-- tmpl_unless root_login --> 
+					<div class="clearskiesbox">
 						<p>
-							<input type="password" name="profile_password" value="" />
-							<input type="submit" value="Change Profile Password" />
-					</form> 
-				</div>	
-			</fieldset> 
-			<div class="floatclear"></div>
-	
-			<!-- tmpl_else -->
-			<div class="clearskiesbox">
-				<p>
-					You must be logged in with the <!-- tmpl_var PROGRAM_NAME --> Root Password to be able to change an address's Profile Password. 
-				</p>
-			</div>
-			<!-- /tmpl_if --> 
+							You must be logged in with the <!-- tmpl_var PROGRAM_NAME --> Root Password to be able to edit a Subscriber's Profile Fields. 
+						</p>
+					</div>
 
+				<!-- /tmpl_unless -->
+
+				<form action="<!-- tmpl_var S_PROGRAM_URL -->" method="post" accept-charset="<!-- tmpl_var HTML_CHARSET -->">
+
+				<!-- tmpl_if root_login --> 
+					 <input type="hidden" name="email"   value="<!-- tmpl_var email escape="HTML" -->" />
+					 <input type="hidden" name="f"       value="membership" />
+					 <input type="hidden" name="process" value="1" />
+					 <input type="hidden" name="type"    value="<!-- tmpl_var type -->" />
+				<!-- /tmpl_if --> 
+
+				<!-- tmpl_unless root_login --> 
+
+					<!-- tmpl_loop fields --> 
+					    <p>
+					     <label for="<!-- tmpl_var name escape=HTML -->" class="label_profile_fields">
+					      <!-- tmpl_var label escape=HTML --> (<!-- tmpl_var name escape=HTML -->): 
+					     </label>
+					    <input type="text" name="<!-- tmpl_var name escape=HTML -->" id="<!-- tmpl_var name escape=HTML -->" value="<!-- tmpl_var value escape=HTML -->" disabled="disabled" />
+					    </p>
+					<!--/tmpl_loop--> 
+
+				<!-- tmpl_else --> 
+
+					<p class="alert">
+						Subscriber Profile Fields information will be changed for all Mailing Lists.
+					</p>
+					<!-- tmpl_loop fields --> 
+					    <p>
+					     <label for="<!-- tmpl_var name escape=HTML -->" class="label_profile_fields">
+					      <!-- tmpl_var label escape=HTML --> (<!-- tmpl_var name escape=HTML -->): 
+					     </label>
+					    <input type="text" name="<!-- tmpl_var name escape=HTML -->" id="<!-- tmpl_var name escape=HTML -->" value="<!-- tmpl_var value escape=HTML -->" />
+					    </p>
+					<!--/tmpl_loop-->
+
+				<!-- /tmpl_unless --> 
+
+				<!-- tmpl_if root_login --> 
+					 <div class="buttonfloat">
+					  <input type="submit" value="Edit Information" class="cautionary" />
+					 </div>
+				<!-- /tmpl_if --> 
+
+					</form>
+
+				</fieldset>
+				<!-- /tmpl_if -->
+
+
+
+					<fieldset> 
+					<legend>Profile Password</legend>
+
+					<!-- tmpl_if root_login --> 
+
+						<div id="change_profile_password_button">
+							<input type="button" value="Click to Change Profile Password..." class="cautionary change_profile_password" />
+						</div> 
+						<div id="change_profile_password_form" style="display:none">
+							<form name="change_profile_password" action="<!-- tmpl_var S_PROGRAM_URL -->" method="post" accept-charset="<!-- tmpl_var HTML_CHARSET -->">
+								<input type="hidden" name="f" value="admin_change_profile_password" /> 
+								<input type="hidden" name="email" value="<!-- tmpl_var email -->" />
+								<input type="hidden" name="type" value="<!-- tmpl_var type -->" />
+
+								<p>
+									<input type="password" name="profile_password" value="" />
+									<input type="submit" value="Change Profile Password" />
+							</form> 
+						</div>	
+					</fieldset> 
+					<div class="floatclear"></div>
+
+					<!-- tmpl_else -->
+					<div class="clearskiesbox">
+						<p>
+							You must be logged in with the <!-- tmpl_var PROGRAM_NAME --> Root Password to be able to change an address's Profile Password. 
+						</p>
+					</div>
+					<!-- /tmpl_if --> 
+
+			<!-- /tmpl_if --> 
+		
+		</div> 
 	<!-- /tmpl_if --> 
+	 
+</div> 
+
+
+
+
+
 
 	<p>
 	 <a href="<!-- tmpl_var S_PROGRAM_URL -->?f=view_list;type=<!-- tmpl_var type -->;page=<!-- tmpl_var page -->;query=<!-- tmpl_var query -->;order_by=<!-- tmpl_var order_by -->;order_dir=<!-- tmpl_var order_dir -->">&lt;&lt; Back</a>
