--- a/dada/templates/new_list_screen.tmpl
+++ b/dada/templates/new_list_screen.tmpl
@@ -405,7 +405,7 @@
 
 
  <p style="text-align:center">
-  <input type="submit" class="processing" value="    Create Your Mailing List    " />
+  <input type="submit" class="processing bigger_button" value="    Create Your Mailing List    " />
  </p>
 
 
